# ndk_test

./: CMakeLists.txt  LICENSE  main.cpp  readme.txt
src/: common.cpp  common.h  http_svr.cpp  http_svr.h  main.cpp  udp.cpp  udp.h  ws_svr.cpp  ws_svr.h
